# WebScraper_com_ChromeDriver_e_FastAPI

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
scrape/: main.py  schema.py
scrape/web_scrapers/: webscraper_chromedriver.py
tests/: test_main.py  test_webscraper_chromedriver.py
